kubernetes/apps/flux-system/flux-operator/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flux-operator
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Infra
    gethomepage.dev/icon: flux-cd
    gatus.home-operations.com/endpoint: |
      group: infrastructure
spec:
  hostnames:
    - "flux-operator.${SECRET_DOMAIN}"
  parentRefs:
    - name: envoy-internal
      namespace: network
  rules:
    - backendRefs:
        - name: flux-operator
          namespace: flux-system
          port: 9080
